[package]
name = "tlu"
description = "A small binary to quickly create multiple hardlinks from a directory"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "color"]}
clap_complete = "4.4.9"
dialoguer = "0.11.0"
